--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://aec9f70a-74b1-4f00-aa66-f31b5a98a3d7.preview.emergentagent.com
 WDS_SOCKET_PORT=443
